--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         </div>
         <div class="content-div">
             <div class="content-one">
-                <p>This is for a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started</p>
-                <p>You know you want to succeed.</p>
+                <div class="paragraph-div">
+                    <p>This is for a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <i>now</i> to get started.</p>
+                    <p>You <i>know</i> you want to succeed.</p>
+                </div>                
             </div>
             <div class="content-two">
-                <h3>Let's do this!</h3>
+                <p>Let's do this!</p>
                 <form method="post" action="#">
                     <div class="row-one">
                         <div class="inc">
@@ -56,8 +58,8 @@
                 <div class="content-three">
                     <button>Create Account</button>                   
                 </form>
-                <p></p>
-            </div>
+                    <p class="signup"></p>
+                </div>
         </div>
     </div>
 </body>
