content width change, add photo references

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <div class="img-div">
             <div class="logo-div">
                 <img src="./images/odin-lined.png">
-                <label class="logo-text">ODIN</label>
+                <label class="logo-text">ODIN</label>                
             </div>
+            <div class="img-ref">
+                <label>Photo by <a href="https://unsplash.com/@haliewestphoto" target="_blank">Halie West</a> on <a href="https://unsplash.com/" target="_blank">unsplash</a></label>
+            </div>            
         </div>
         <div class="content-div">
             <div class="content-one">
@@ -87,15 +90,6 @@
             }
         }
 
-        function onfocusin(){
-            input_elem.style.borderColor = "blue";
-            input_elem.style.boxShadow = "5px 5px 2px 1px rgba(0, 0, 0, 0.05)";
-        }
-
-        function onfocusout(){
-            input_elem.style.borderColor = "#E5E7EB";
-            input_elem.style.boxShadow = "";
-        }
     </script>
 </body>
 </html>
