add form validation script

--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
                     <div class="row-one">
                         <div class="inc">
                             <label for="firstname">FIRST NAME</label>
-                            <input type="text" id="firstname" name="firstname" pattern="([A-Z][a-zA-Z '.-]*[A-Za-z][^-])">
+                            <input type="text" id="firstname" name="firstname">
                         </div>
                         <div class="inc">
                             <label for="lastnmae">LAST NAME</label>
-                            <input type="text" id="lastnmae" name="lastname" pattern="([A-Z][a-zA-Z '.-]*[A-Za-z][^-])">
+                            <input type="text" id="lastnmae" name="lastname">
                         </div>
                     </div>
                     <div class="row-two">
                         <div class="inc">
                             <label for="email">EMAIL</label>
-                            <input type="email" id="email" name="email" pattern="([a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,})">
+                            <input type="email" id="email" name="email">
                         </div>
                         <div class="inc">
                             <label for="phonenumber">PHONE NUMBER</label>
-                            <input type="tel" id="phonenumber" name="phonenumber" pattern="(\+?\s*(\d\s*){7,15})">
+                            <input type="tel" id="phonenumber" name="phonenumber">
                         </div>
                     </div>
                     <div class="row-three">
                         <div class="inc">
                             <label for="pw1">PASSWORD</label>
-                            <input type="password" id="pw1" name="password" pattern="([a-zA-Z0-9@#$_]{8,10})" required>
+                            <input type="password" id="pw1" name="password">
                             <label id="password-alert">numbers, letters or @, #, $, _ length of 8-10</label>
                         </div>
                         <div class="inc">
                             <label for="pw2">CONFIRM PASSWORD</label>
-                            <input type="password" id="pw2" name="passwordcheck" required>
+                            <input type="password" id="pw2" name="passwordcheck">
                         </div>
                     </div>
                 </div>
@@ -66,6 +66,8 @@
                 </div>
         </div>
     </div>
+
+    <script src="validation.js"></script>
 
     <script>
         document.getElementById('frm').addEventListener('submit', function(e){           
